compiler/fir/analysis-tests/testData/resolve/expresssions/objectVsProperty.kt
object <!REDECLARATION!>A<!>

val <!REDECLARATION!>A<!> = 10


fun foo() = A

fun bar() {
    val A = ""
    val b = A
}

